# db/schema.rb
@@ -12,7 +12,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[8.0].define(version: 20_251_006_143_603) do
+ActiveRecord::Schema[8.0].define(version: 20_251_006_201_031) do
   # These are extensions that must be enabled in order to support this database
   enable_extension 'pg_catalog.plpgsql'
 
@@ -40,6 +40,21 @@ ActiveRecord::Schema[8.0].define(version: 20_251_006_143_603) do
     t.index ['nome'], name: 'index_categoria_on_nome', unique: true
   end
 
+  create_table 'emprestimos', force: :cascade do |t|
+    t.bigint 'livro_id', null: false
+    t.bigint 'usuario_id', null: false
+    t.bigint 'bibliotecario_id', null: false
+    t.datetime 'data_emprestimo', null: false
+    t.datetime 'data_limite_devolucao', null: false
+    t.datetime 'data_devolucao'
+    t.integer 'contador_renovacao', default: 0, null: false
+    t.datetime 'created_at', null: false
+    t.datetime 'updated_at', null: false
+    t.index ['bibliotecario_id'], name: 'index_emprestimos_on_bibliotecario_id'
+    t.index ['livro_id'], name: 'index_emprestimos_on_livro_id'
+    t.index ['usuario_id'], name: 'index_emprestimos_on_usuario_id'
+  end
+
   create_table 'livros', force: :cascade do |t|
     t.string 'titulo', null: false
     t.string 'autor', null: false
@@ -63,5 +78,8 @@ ActiveRecord::Schema[8.0].define(version: 20_251_006_143_603) do
     t.index ['email'], name: 'index_usuarios_on_email', unique: true
   end
 
+  add_foreign_key 'emprestimos', 'bibliotecarios'
+  add_foreign_key 'emprestimos', 'livros'
+  add_foreign_key 'emprestimos', 'usuarios'
   add_foreign_key 'livros', 'categoria', column: 'categoria_id'
 end
